// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsComponent Check it renders when not loaded 1`] = `
<Layout
  breadcrumb={
    <Breadcrumb
      allActive={true}
      onClickCrumb={[Function]}
    />
  }
  content={
    <span>
      loader
    </span>
  }
  leftMenu={
    <div
      style={
        Object {
          "paddingTop": 10,
        }
      }
    >
      <ObservationControlComponent
        id="1"
        onClickNewControl={[Function]}
        onClickNewObservation={[Function]}
        selectControl={true}
        selectObservation={true}
      />
    </div>
  }
  title="Magasin"
  toolbar={
    <Toolbar
      clickShowLeft={[Function]}
      clickShowRight={[Function]}
      labelLeft="Observasjoner"
      labelRight="Kontroller"
      placeHolderSearch="Filtrer i listen"
      showLeft={true}
      showRight={true}
    />
  }
/>
`;

exports[`EventsComponent Check it renders. 1`] = `
<Layout
  breadcrumb={
    <Breadcrumb
      allActive={true}
      onClickCrumb={[Function]}
    />
  }
  content={
    <div
      style={
        Object {
          "color": "grey",
          "textAlign": "center",
        }
      }
    >
      Ingen kontroller eller observasjoner
    </div>
  }
  leftMenu={
    <div
      style={
        Object {
          "paddingTop": 10,
        }
      }
    >
      <ObservationControlComponent
        id="1"
        onClickNewControl={[Function]}
        onClickNewObservation={[Function]}
        selectControl={true}
        selectObservation={true}
      />
    </div>
  }
  title="Magasin"
  toolbar={
    <Toolbar
      clickShowLeft={[Function]}
      clickShowRight={[Function]}
      labelLeft="Observasjoner"
      labelRight="Kontroller"
      placeHolderSearch="Filtrer i listen"
      showLeft={true}
      showRight={true}
    />
  }
/>
`;
